91%done- finalizing of content; finishing albums/media //- head navbar
Signed-off-by: HanaLevak <hanna.levak@gmail.com>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,21 @@
 
+ body{  margin-left: 6px;
+}
+.ui stackable celled grid container{
 
-body{{ 
-display:block;
+}
+
+    .carouselExampleIndicators{
+
+    }
+}
+.no-container {
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: flex-end;}
+
+
+body{
 font-family: "Helvetica Neue", Arial, sans-serif ;
 font-size:14px;
 letter-spacing:1px;
@@ -10,31 +24,23 @@ margin-bottom:0px;
 margin-left:0px;
 margin-right:0px;
 margin-top:0px;
-text-align:left;
 text-size-adjust:100%;
 }
 body {
   padding: 0;
   margin: 0;
-  background: #f2f6e9;
-}
-.header {
-  background-image: url('images/header-background.jpg');
-  background-size: cover;
-  background-position: center;
-  position: relative;
-}
-
+  
 /*--- navigation bar ---*/
 
-.navbar {
-  background:#6ab446;
+
 }
+
+
 
 .nav-link,
 .navbar-brand {
-  color: #fff;
-  cursor: pointer;
+  color: rgba(0, 0, 0, 0.914);
+ 
 }
 
 .nav-link {
@@ -45,62 +51,15 @@ body {
   color: #000;
 }
 
-.navbar-collapse {
-  justify-content: flex-end;
 
-.header {
-  background-image (src:'../assets/images/HERO1.jpg');
-  background-size: cover;
-  background-position: center;
-  position: relative;
-}
-header {
-  display: grid;
-  grid-template-areas: "hero";
-  place-items: center;
-  height: 60vh;
-  max-height: 600px;
-  background-color::((required))
-  overflow:enabled hidden;
-
-  ::before {
-    content: "";
-    grid-area: hero;
-    place-self: start;
-    width: 50vmin;
-    height: 50vmin;
-    border-radius: 50%;
-    transform: translate(-10%, -10%);
-    background-image: url("bgbgbggbbgbgbgbgbgbbgb fill='#{svgColor(layerOne)}' fill-opacity='0.9'")
-  }
-
-  &::after {
-    content: "";
-    grid-area: hero;
-    place-self: end;
-    width: 30vmin;
-    height: 60vmin;
-    transform: translate(20%, 40%) rotate(45deg);
-    background-image:( (src="assets/images/HERO1.png" fill-opacity='0.6' fill-rule='evenodd');
-  }
-
-   * {
-    grid-area: "hero__content";
-  }
 
   img {
     object-fit: cover;
+    display: grid;
     height: 100%;
     width: 100%;
     z-index: -1;
   }
-
-  .hero__content {
-    z-index: 1;
-    text-align: center;
-    color: #fff;
-    min-width: 30ch;
-    padding: 1rem;
 
     h1 {
       font-size: 3rem;
@@ -110,29 +69,7 @@ header {
 
     p {
       font-size: 1.75rem;
-    }
-}
-
-.button {
-  font-size: 1.25rem;
-  font-weight: 500;
-  text-decoration: none;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  align-self: start;
-  background-color: #fff;
-  color: $secondary;
-  border-radius: 8px;
-  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.3);
-  padding: 0.25em 0.75em;
-  min-width: 10ch;
-  min-height: 44px;
-  text-align: center;
-  line-height: 1.1;
-  transition: 220ms all ease-in-out;
-}
-
+ 
 
 
 * {
@@ -143,16 +80,22 @@ body {
   min-height: 100vh;
   font-family: "Baloo 2", sans-serif;
 }
-
-
-.description button {
-  border:1px solid #6ab446;
-  background:#6ab446;
-  border-radius: 0;
-  color:#fff;
+.features .form-control,
+.features input {
+    border-radius: 0;
 }
-.description button:hover {
-  border:1px solid #fff;
-  background:#fff;
-  color:#000;
+
+.form-group {
+  background-color: rgba(40, 12, 31, 0.934)(52, 45, 45)
+  border: 1px solid black;
+  margin-top: 20px;
+}
+
+.features .btn:hover {
+  background-color: #333;
+  border: 1px solid #333;
+}
+.FormControlTextarea1{
+    font-size: 1,84rem;
+    clip-rule: #fafafa
 }
