--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+.jumbotron ::content(img :-webkit-full-screen)}
+
+.card dark-color card-image{
+    font-size-adjust: inherit;
+    color: black;
+
+}
 * {
   box-sizing: border-box}
 
