--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,19 @@
-.jumbotron ::content(img :-webkit-full-screen)}
 
-.card dark-color card-image{
-    font-size-adjust: inherit;
-    color: black;
+@mixin box-sizing {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+
+}
+.card-image-{
+    -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(5px);  
+  max-width: 50%;
+  max-height: 50%;
+  padding: 20px 40px;
+  
 
 }
 * {
@@ -20,6 +31,7 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
  .carousel{
+     position:relative ;
     
     display:  justify center block;
     animation-delay: 5s;
