--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
-
+* {
+  box-sizing: border-box}
 @mixin box-sizing {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -7,32 +8,27 @@
 
 
 }
-.card-image-{
+.jumbotron{
     -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(5px);  
+  backdrop-filter: blur(20px);  
   max-width: 50%;
   max-height: 50%;
-  padding: 20px 40px;
-  
-
+  padding: 20px 10px;
 }
-* {
-  box-sizing: border-box}
+
 
 .flex-container {
     display: -webkit-inline-flex;
-  display: inline-block;
-}
+ 
 
 
-body, html {
+*html {
   height: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
  .carousel{
      position:relative ;
-    
     display:  justify center block;
     animation-delay: 5s;
     animation-duration:9min;
