--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,9 +29,19 @@ max-width: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
- .carousel{
-     position:relative ;
-    display:  justify center block;
+ .car.carousel-item {
+  position: relative;
+  display: none;
+  align-items: center;
+  width: 100%;
+  @include transition($carousel-transition);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+ousel{
+
+     position:center;
+    display:  -moz-inline-stack;
     animation-delay: 5s;
     animation-duration:9min;
     orientation: landscape;
@@ -44,8 +54,5 @@ max-width: 100%;
       display: visible;
       -webkit-animation-duration :unset;
       justify-content: inline;}
-      
-      
-      
-      }
+        }
   
